Add bordeaux-threads manualy to get commit 466284f3ab2b3a76141e83641df9487843b04d9e (Add semaphores abstraction to bordeaux-threads)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
 before_script:
   - apt-get update -qy
   - apt-get install -y git-core
+  - git clone https://github.com/sionescu/bordeaux-threads.git ~/quicklisp/local-projects/bordeaux-threads
   - git clone https://gitlab.com/ediethelm/trivial-utilities.git ~/quicklisp/local-projects/trivial-utilities
   - git clone https://gitlab.com/ediethelm/trivial-object-lock.git ~/quicklisp/local-projects/trivial-object-lock
   - cp -r /builds/ediethelm/trivial-pooled-database ~/quicklisp/local-projects/
